fix spacing for projects

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -986,10 +986,12 @@ body.offcanvas {
   background-repeat: no-repeat;
   position: relative;
   height: 300px;
-  width: 300px;
+  width: 330px;
   /* width: 100%; */
   display: block;
-  margin: 30px; }
+  margin: 10px;
+  margin-bottom: 30px;
+}
   /* margin-bottom: 30px; } */
   .project .desc {
     position: absolute;
